[package]
name = "dmtb_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix = "0.13"
actix-web-actors = "4"
config = "0.13.3"
futures = "0.3.26"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0.94"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Lets you serialize the uuid to json
]

[dependencies.serde]
version = "1.0"
features = ["derive"]
